--- a/aboutUs.html
+++ b/aboutUs.html
@@ -62,6 +62,76 @@
 </section>
 <!--/intro-->
 
+<section class="section">
+    <div class="container">
+        <h2 class="block__title">
+            OUR TRAVELS
+        </h2>
+        <a href="#" class="block__link">
+            VIEW ALL TRAVELS
+        </a>
+
+        <div class="wrapper">
+            <div class="block">
+                <a href="#" class="services__item">
+                    <div class="services__content" style="background-image:url('img/example.jpg');">
+                        <div class="services__content-item">
+                            <div class="services__img">
+                                <img src="img/plus.svg" alt="">
+                            </div>
+                            <p class="services__text">
+                                TRAVEL WITH US
+                            </p>
+                        </div>
+                    </div>
+                    <h3 class="services__title">
+                        TRAVELS
+                    </h3>
+                </a>
+            </div>
+            <!--/block-->
+            <div class="block">
+                <a href="#" class="services__item">
+                    <div class="services__content" style="background-image:url('img/example.jpg');">
+                        <div class="services__content-item">
+                            <div class="services__img">
+                                <img src="img/plus.svg" alt="">
+                            </div>
+                            <p class="services__text">
+                                TRAVEL WITH US
+                            </p>
+                        </div>
+                    </div>
+                    <h3 class="services__title">
+                        TRAVELS
+                    </h3>
+                </a>
+            </div>
+            <!--/block-->
+            <div class="block">
+                <a href="#" class="services__item">
+                    <div class="services__content" style="background-image:url('img/example.jpg');">
+                        <div class="services__content-item">
+                            <div class="services__img">
+                                <img src="img/plus.svg" alt="">
+                            </div>
+                            <p class="services__text">
+                                TRAVEL WITH US
+                      TRAVELS
+                    </h3>
+                </a>
+            </div>
+            <!--/block-->
+        </div>
+        <!--/wrapper-->
+    </div>                       </p>
+                        </div>
+                    </div>
+                    <h3 class="services__title">
+       
+    <!--/container-->
+</section>
+
 
 <footer class="footer">
     <div class="container">
