--- a/contact.html
+++ b/contact.html
@@ -45,23 +45,60 @@
     <!--/container-->
 </header>
 
-<section class="intro" style="background-image:url('img/intro_bg.jpg');">
-    <div class="container">
-        <div class="intro__content">
-            <div class="intro__block">
-                <h1 class="intro__title">
-                    DREAMS WITH US
-                </h1>
-
-                <a href="#" class="btn">
-                    Show more
-                </a>
-            </div>
-        </div>
-    </div>
-</section>
 <!--/intro-->
-
+<section class="contacts">
+    <div class="container">
+        <h2 class="block__title text-white">
+            Contact us
+        </h2>
+        <form class="contacts__form" action="">
+            <div class="form__row">
+                <div class="form__group">
+                    <input type="text" class="input"  placeholder=" ">
+                    <label for="" class="label">
+                        Name
+                    </label>
+                </div>
+                <div class="form__group">
+                    <input type="text" class="input" placeholder=" ">
+                    <label for="" class="label">
+                        Last name
+                    </label>
+                </div>
+            </div>
+            <!--/form__row-->
+            <div class="form__row">
+                <div class="form__group">
+                    <input type="email" class="input" placeholder=" ">
+                    <label for="" class="label">
+                        Email
+                    </label>
+                </div>
+                <div class="form__group">
+                    <input type="tel" class="input" placeholder=" ">
+                    <label for="" class="label">
+                        Phone
+                    </label>
+                </div>
+            </div>
+            <!--/form__row-->
+            <div class="form__row">
+                <div class="form__group">
+                    <textarea class="textarea" placeholder=" " name=""></textarea>
+                    <label for="" class="label">
+                        Message
+                    </label>
+                </div>
+            </div>
+            <!--/form__row-->
+            <button class="btn text-upper" type="submit">
+                Send
+            </button>
+        </form>
+        <!--/contact__form-->
+    </div>
+    <!--/container-->
+</section>
 
 <footer class="footer">
     <div class="container">
